# gen_ai_rag_langchain

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  setup.sh  test_config_manual.py
.github/workflows/: ci-cd.yml
deployment/: deploy.sh  task-definition.json
docs/: README.md  getting-started.md  index.html  index.md  script.js  styles.css
src/gen_ai_rag_langchain/: __init__.py  api.py  cli.py  config.py  core.py
tests/: conftest.py
tests/functional/: __init__.py  test_cli.py
tests/integration/: test_api.py
tests/unit/: __init__.py  test_config.py  test_core.py
